{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "movementActionMap",
            "id": "1ad04f7c-e365-4113-84a9-7919ed7fe00a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e944eed7-2027-4cf7-be2e-33248e7ffc40",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "bba7b7d8-99a2-4846-9964-b52a2a4b825c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2b70f4ad-ece5-4f9c-b1e6-bcb0835dc062",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fcf3ad0b-e299-4089-9d07-b6e15e5cae74",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c39c40b9-5681-42d8-a9d0-314da0caffca",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "97a8b958-fa4a-405c-a634-9eff7a327a9c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ArrowKeys",
                    "id": "a81a63e6-ff15-4b76-9f9b-216f88cfaf5b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "97558324-955a-475e-8927-4cfce8d99c5b",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2b099630-6099-42ca-9f99-7babc3f555c3",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "45a55779-5722-491f-bafa-49b11ea8b8b6",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8c6def02-9ad6-4694-8ed5-5ce33495d2bd",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UIInputsActionMap",
            "id": "ba85233f-8868-427e-99d0-91faebacfbd3",
            "actions": [
                {
                    "name": "BackToMenu",
                    "type": "Button",
                    "id": "ca102813-d29c-4a87-a6d4-ce12b71b228e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "12a4f8a8-a0a6-4988-8066-49c8c8e70e11",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackToMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}